--- a/kinematics/forward_kinematics_2d.ipynb
+++ b/kinematics/forward_kinematics_2d.ipynb
@@ -18,8 +18,7 @@
     "from numpy import sin, cos, pi, matrix, random\n",
     "from __future__ import division\n",
     "from math import atan2\n",
-    "from IPython import display\n",
-    "from ipywidgets import interact, fixed"
+    "from IPython import display"
    ]
   },
   {
@@ -1214,9 +1213,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:robocup]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-robocup-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1228,7 +1227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.12.3"
   },
   "widgets": {
    "state": {
@@ -3817,5 +3816,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
